--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+p, li, span{
+    font-family: "Raleway", sans-serif;
+}
+
 @font-face {
     font-family: "Lato";
     src: url(../fonts/Lato-Regular.woff2);
@@ -31,6 +37,8 @@ header{
     box-shadow: 5px 5px 10px 5px black , -5px 0px 10px 5px black;
 }
 
+/*début du main*/
+
 address{
    display: flex;
    flex-direction: row;
@@ -42,6 +50,7 @@ address{
 a{
     color: white;
     text-decoration: none;
+    align-content: center;
 }
 
 #structure{
@@ -53,27 +62,42 @@ a{
     background-color: #dbc2a4 ;
 }
 
+/*début de la colonne de gauche */
+
 #left{
     width: 33%;
     background-color: #782221;
-    padding-left: 20px;
     padding-right: 40px;
+}
+
+#left h2{
+    padding-left: 20px;
 }
 
 p{
     color: white;
     text-indent: 30px;
     text-align: justify;
+    padding-left: 20px;
 }
 
 #left ul{
-    padding-inline-start: 20px;
     color: white;
-
 }
+
+/* fin colonne gauche début colone droite*/
+
 #right{
     width: 66%;
+    padding: 0 10px 0 30px;
 }
+
+#right h2{
+    padding-left: 5px;
+    border-left: 10px solid  #782221;
+}
+
+/* fin colonne de droit début footer*/
 
 #logo{
     width: 48px;
