--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,7 @@ header{
     color: white;
 }
 
-#avatar{
+header img{
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -96,6 +96,10 @@ p{
 #right h2{
     padding-left: 5px;
     border-left: 10px solid  #782221;
+}
+
+span{
+    display: block;
 }
 
 /* fin colonne de droit début footer*/
